force-app/main/default/objects/Customer_Meeting_Attendee__c/Customer_Meeting_Attendee__c.object-meta.xml
<CustomObject>
    <label>Cargill Attendee Details</label>
    <nameField>
        <displayFormat>Att-{00000}</displayFormat>
        <label>Customer Meeting Attendees Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cargill Attendee Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>