force-app/main/default/objects/Customer_Meeting_Attendee__c/fields/Attendee_Name__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Name__c</fullName>
    <formula>Cargill_Attendee__r.Suffix  &amp; &#39; &#39; &amp; Cargill_Attendee__r.FirstName &amp; &#39; &#39; &amp;  Cargill_Attendee__r.MiddleName &amp; &#39; &#39; &amp; Cargill_Attendee__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Name</label>
    <type>Text</type>
</CustomField>