force-app/main/default/objects/Customer_Meeting_Attendee__c/fields/Cargill_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Cargill_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cargill Attendee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Meeting_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>