force-app/main/default/objects/Customer_Meeting_Attendee__c/fields/Customer_Meeting_Report__c.field-meta.xml
<CustomField>
    <fullName>Customer_Meeting_Report__c</fullName>
    <label>Customer Meeting Report</label>
    <referenceTo>CustomerMeetingReport__c</referenceTo>
    <relationshipName>Cargill_Meeting_Attendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>