force-app/main/default/objects/Customer_Meeting_Attendee__c/fields/Role_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Role_Responsibility__c</fullName>
    <label>Role / Responsibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facilitator</fullName>
            </value>
            <value>
                <fullName>Observer</fullName>
            </value>
            <value>
                <fullName>Subject Matter Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>